minor fix on panel collapse

--- a/manager/media/style/MODxFLAT/style.css
+++ b/manager/media/style/MODxFLAT/style.css
@@ -3140,7 +3140,7 @@ font-size:1.2em;
 .panel-title > a:hover {
     text-decoration: none;
     color:#FFF;
-    background: #2f8feb;
+    opacity: 0.85;
 }
 
 /* category icons in manage elements */ 
